<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LedShow</string>
    <string name="tv_texto">Texto a desplegar:</string>
    <string name="tv_estilo">Estilo:</string>
    <string name="tv_tamano">tamano:</string>
    <string name="tv_fondo_color">Fondo:</string>
    <string name="tv_fondo1_color">Fondo 1:</string>
    <string name="tv_fondo2_color">Fondo 2:</string>
    <string name="tv_texto_color">Texto:</string>
    <string name="btn_estilos">Ejemplo estilo de fuente</string>
    <string name="rb_size1">Pequeno</string>
    <string name="rb_size2">Mediano</string>
    <string name="rb_size3">Grande</string>
    <string name="menu_fuente">Fuente</string>
    <string name="menu_efecto">Efecto</string>
    <string name="menu_direccion">Direccion</string>
    <string name="menu_fOscuro_tClaro">Fondo Oscuro-Texto Claro</string>
    <string name="menu_fClaro_tOscuro">Fondo Claro-Texto Oscuro</string>
    <string name="menu_fParpadeante_tClaro">Fondo Parpadeante-Texto Claro</string>
    <string name="menu_fParpadeante_tOscuro">Fondo Parpadeante-Texto Oscuro</string>
    <string name="menu_cancelar">Cancelar</string>  <string name="menu_guardar">Guardar</string>
    <string name="title_activity_fuentes">Fuentes</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_fondo_solido">Efecto de color</string>
    <string name="title_activity_fondo_parpadeante">Efecto de color</string>

</resources>