<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FuentesActivity" >

    <TextView
        android:id="@+id/tv_estilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_estilo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_estilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_estilos" />

    <TextView
        android:id="@+id/tv_tamano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_tamano"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rbg_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rb_size1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_size1" />

        <RadioButton
            android:id="@+id/rb_size2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_size2" />

        <RadioButton
            android:id="@+id/rb_size3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_size3" />
    </RadioGroup>

</LinearLayout>