<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FondoParpadeanteActivity" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fondo1_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/tb_f1_1"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <ToggleButton
            android:id="@+id/tb_f1_2"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

        <ToggleButton
            android:id="@+id/tb_f1_3"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <ToggleButton
            android:id="@+id/tb_f1_4"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fondo2_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/tb_f2_1"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

        <ToggleButton
            android:id="@+id/tb_f2_2"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

        <ToggleButton
            android:id="@+id/tb_f2_3"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

        <ToggleButton
            android:id="@+id/tb_f2_4"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_texto_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/tb_f3_1"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

        <ToggleButton
            android:id="@+id/tb_f3_2"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

        <ToggleButton
            android:id="@+id/tb_f3_3"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <ToggleButton
            android:id="@+id/tb_f3_4"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

    </LinearLayout>

</LinearLayout>